# binancemd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: binance_md.cmake
include/: binancemd
include/common/: Logger.h
include/internal/: binancemd.h
include/managers/: BMDManager.h
include/models/: AggTrade.h
include/models/futures/: AggTrade.h
src/: dummy.cpp
src/managers/: BMDManager.cpp
tests/: CMakeLists.txt
tests/cases/: fut_streams_tests.cpp  spot_streams_tests.cpp  streams_tests.cpp
